user validation added

--- a/shop/templates/customer/register.html
+++ b/shop/templates/customer/register.html
@@ -12,6 +12,7 @@
         <div class="col-md-2"></div>
     </div>
     <form action="" method="post">
+        {{ form.csrf_token }}
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-4">
