--- a/shop/templates/customer/order.html
+++ b/shop/templates/customer/order.html
@@ -5,41 +5,39 @@
     {% include '_messages.html' %}
     <div class="row">
         <div class="col-md-12">
+            Inoice: {{orders.invoice}}
+            <br>
+            Status: {{orders.status}}
+            <br>
+            Customer name: {{customer.name}}
+            <br>
+            Customer email: {{customer.email}}
+            <br>
+            Customer contact: {{customer.contact}}
+            <br>
+            <br>
         <table class="table table-sm">
             <thead>
                 <th>Sr</th>
-                <th>Image</th>
                 <th>Name</th>
                 <th>Color</th>
                 <th>Price</th>
                 <th>Quantity</th>
                 <th>Discount</th>
                 <th>Subtotal</th>
-                <th>Update</th>
-                <th>Delete</th>
             </thead>
             <tbody>
-                {% for key, product in session['Shoppingcart'].items() %}
+                {% for key, product in orders.orders.items() %}
                 {% set discount =(product.discount/100) * product.price|float %}
                 <tr>
                     <td>{{loop.index}}</td>
-                    <td><img src="{{url_for('static',filename='images/'+ product.image)}}" alt="{{product.name}}" width="50" height="45"></td>
                     <td>{{product.name}}</td>
                     <form action="{{url_for('updatecart', code=key)}}" method="post">
-                    <td>
-                        {% set colors = product.colors.split(',') %}
-                        <label for="colors">Colors: </label>
-                        <select name="color" id="color">
-                            <option value="{{product.color}}" style="display: none;">{{product.color|capitalize}}</option>
-                            {% for color in colors %}
-                            {% set col = color.split(':') %}
-                            <option value="{{col[0]}}">{{col[0] | capitalize }}</option>
-                            {% endfor %}
-                        </select>
-                    
+                    <td> 
+                        {{product.color|capitalize}}
                     </td>
                     <td>${{"%.2f"|format(product.price)}}</td>
-                    <td> <input type="number" name="quantity" min="1" max="10" value="{{product.quantity}}"> </td>
+                    <td> {{product.quantity}} </td>
                     {% if product.discount  %}
                     <td>{{product.discount}} % &nbsp; &nbsp; is {{"%.2f"|format(discount)}}</td>
                     {% else %}
@@ -47,20 +45,18 @@
                     {% endif %}
                     {% set subtotal = product.quantity|int * product.price|float  %}
                     <td>${{"%.2f"|format(subtotal - discount|round(1,'floor')) }}</td>
-                    <td><button type="submit" class="btn btn-sm btn-info">Update</button> </td>
-                </form>
-                    <td> <a href="{{url_for('deleteitem', id=key)}}" class="btn btn-sm btn-danger">Delete</a></td>
+                </form>        
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
         <table class="table table-sm">
            <tr>
-               <td> <a href="{{url_for('get_order')}}" class="btn btn-success"> Order now </a> </td>
+               <td> <a href="#" class="btn btn-success"> Check out </a> </td>
                <td width="35%"></td>
                <td> <h5>Tax: ${{tax}}</h5></td>
-               <td> <h5>Grand total: ${{grandtotal}}</h3> </td>
-                <td> <a href="{{url_for('clearcart')}}" class="btn btn-danger btn-sm float-right mr-4"> Clear cart</a> </td>
+               <td> <h5>Grand total: ${{grandTotal}}</h3> </td>
+                <td> <a href="#" class="btn btn-danger btn-sm float-right mr-4"> Get PDF </a> </td>
            </tr>
         </table>
     </div>
