flask Stripe payment functionality was add

--- a/shop/templates/customer/order.html
+++ b/shop/templates/customer/order.html
@@ -51,8 +51,26 @@
             </tbody>
         </table>
         <table class="table table-sm">
-           <tr>
-               <td> <a href="#" class="btn btn-success"> Check out </a> </td>
+           <tr> 
+
+               <td>   
+                   {% if ordrs.status =='Paid' %}
+                   {% else %}
+                <form action="{{url_for('payment')}}" method="POST">
+                {% set amount =  grandTotal.replace('.','') %}
+                <input type="hidden" name="amount" value="{{amount}}">
+                <input type="hidden" name="invoice" value="{{orders.invoice}}">
+                <script src="https://checkout.stripe.com/checkout.js"
+                  class="stripe-button"
+                  data-key="pk_test_MaILxTYQ15v5Uhd6NKI9wPdD00qdL0QZSl"
+                  data-name="{{customers.name}}"
+                  data-description="myshop parchase"
+                  data-amount="{{amount}}"
+                  data-currency="usd">
+                </script>
+              </form> 
+              {% endif %}
+            </td>
                <td width="35%"></td>
                <td> <h5>Tax: ${{tax}}</h5></td>
                <td> <h5>Grand total: ${{grandTotal}}</h3> </td>
